# pattermino

./: README.md  gitignore  pattermino.cabal
examples/: Sticker.hs
src/Pattermino/: Core.hs  Grid.hs  Match.hs  Polyomino.hs
test/: Main.hs
