cabal-version:      3.0
name:               pattermino
version:            0.1.0.0
synopsis:           Polyomino pattern matching on grids
description:
  Pattermino models polyomino shapes as typed patterns and matches them
  against grids using Haskell pattern matching.
  
  Developed as a Lambda World 2026 talk companion — demonstrating how
  algebraic data types naturally model geometric domains.

license:            MIT
author:             Niko
maintainer:         Niko
category:           Education
build-type:         Simple

library
  exposed-modules:
    Pattermino.Core
    Pattermino.Polyomino
    Pattermino.Grid
    Pattermino.Match
  hs-source-dirs:   src
  default-language: Haskell2010
  build-depends:
    base >= 4.14

executable sticker-example
  main-is:          Sticker.hs
  hs-source-dirs:   examples
  default-language: Haskell2010
  build-depends:
    base >= 4.14,
    pattermino

test-suite pattermino-test
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   test
  default-language: Haskell2010
  build-depends:
    base >= 4.14,
    pattermino
